--- a/BookRecommendationWebApp/BookRecommendationWebApp/Views/Shared/_LoginPartial.cshtml
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,32 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@using Microsoft.AspNetCore.Identity
+@using BookRecommendationWebApp.Models.Accounts
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
+
+@if (SignInManager.IsSignedIn(User))
+{
+    <ul class="account-links">
+        <li>
+            <a class="account-link text-dark" asp-controller="Home" asp-action="Index"
+               title="Welcome">
+                Welcome @User.Identity.Name!
+            </a>
+        </li>
+        <li>
+            <form class="form-inline" asp-controller="Account" asp-action="Logout">
+                <button type="submit" class="account-link btn btn-link text-dark">Logout</button>
+            </form>
+        </li>
+    </ul>
 }
-
-
+else
+{
+    <ul class="account-links">
+        <li>
+            <a class="account-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+        </li>
+        <li>
+            <a class="account-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+        </li>
+    </ul>
+}
