--- a/BookRecommendationWebApp/BookRecommendationWebApp/Views/Books/AddBook.cshtml
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/Views/Books/AddBook.cshtml
@@ -33,12 +33,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control" rows="3" type="text"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label>Select categories</label>
-                @Html.ListBoxFor(model => model.SelectedCategories, new MultiSelectList(Model.Categories, "CategoryId", "CategoryName"), new { id = "dropDown", multiple = "multiple", data_placeholder = "Choose categories..." })
+                @Html.ListBoxFor(model => model.SelectedCategories, new MultiSelectList(Model.Categories, "CategoryId", "CategoryName"), new {id = "dropDown", multiple = "multiple", data_placeholder = "Choose categories..."})
                 <span asp-validation-for="SelectedCategories" class="text-danger"></span>
             </div>
             <div class="form-group">
