--- a/BookRecommendationWebApp/BookRecommendationWebApp/Views/Shared/_Layout.cshtml
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/Views/Shared/_Layout.cshtml
@@ -44,7 +44,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Bookworm's Advisor - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - Bookworm's Advisor - <a asp-area="" asp-controller="Home" asp-action="Index">Browse</a>
+            - <a asp-area="" asp-controller="Home" asp-action="Index">Recommendations</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
