--- a/BookRecommendationWebApp/BookRecommendationWebApp/wwwroot/css/site.css
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/wwwroot/css/site.css
@@ -70,6 +70,6 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-h1 {
-    margin-top: 30px;
+.description-input input[type="text"] {
+    height: 10em;
 }
