--- a/BookRecommendationWebApp/BookRecommendationWebApp/Views/_ViewImports.cshtml
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using BookRecommendationWebApp
 @using BookRecommendationWebApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, cloudscribe.Web.Pagination
