--- a/BookRecommendationWebApp/BookRecommendationWebApp/wwwroot/css/site.css
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/wwwroot/css/site.css
@@ -1,6 +1,8 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -60,7 +62,7 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 .footer {
   position: absolute;
@@ -70,6 +72,127 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.description-input input[type="text"] {
-    height: 10em;
+.grid-container {
+    display: grid;
+    grid-column-gap: 30px;
+    grid-template-columns: 50px 15% auto 15%;
+    grid-template-rows: 150px 50px auto 80px 20px;
 }
+
+.category-sidebar {
+    grid-column: 2;
+    grid-row: 2 / span 2;
+}
+
+.category-sidebar-header {
+    line-height: 40px;
+    font-family: "Monsterrat", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    color: white;
+    background-color: #0366d6;
+    text-align: center;
+    padding: 5px 5px;
+}
+
+.category-sidebar-list, .book-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.category-sidebar-item {
+    background-color: lightblue;
+    transition: 0.4s ease
+}
+
+.category-sidebar-item:hover {
+    background-color: lightskyblue;
+}
+
+.category-sidebar ul a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    line-height: 50px;
+    font-family: "Monsterrat", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    text-decoration: none;
+    color: black;
+    padding-left: 20px;
+    box-sizing: border-box;
+    border-top: 1px solid rgba(255, 255, 255, .1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.book-list {
+    grid-column: 3;
+    grid-row: 3;
+    padding-left: 50px;
+    list-style-position: inside;
+}
+
+
+.book-item {
+    border: 1px solid black;
+    border-radius: 10px;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 100px auto 120px;
+    grid-template-rows: 50px 40px auto;
+    margin: 20px 0;
+}
+
+.cover-image {
+    width: 90px;
+    height: 150px;
+    grid-column: 1;
+    grid-row: 1/span 3;
+    padding: 10px
+}
+
+.book-title .book-author {
+    font-family: "Monsterrat", sans-serif;
+    font-weight: 400;
+}
+
+.book-title {
+    padding-top: 10px;
+    font-size: 24px;
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.book-author {
+    font-size: 20px;
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.search-bar {
+    grid-column: 3;
+    grid-row: 2;
+    margin-left: auto;
+}
+
+.no-results-message {
+    font-family: "Monsterrat", sans-serif;
+    font-weight: 500;
+    font-size: 32px;
+}
+
+.search-results-message {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.category-header {
+    grid-row: 1;
+    grid-column: 3;
+    font-size: 36px;
+    padding-left: 50px;
+    padding-top: 50px;
+}
+
+
