--- a/BookRecommendationWebApp/BookRecommendationWebApp/Views/Shared/_Layout.cshtml
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/layout-style.css" />
     <link href="~/chosen/chosen.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
