Added user review history view. Minor cosmetic changes in Login, Register and AddBook views

--- a/BookRecommendationWebApp/BookRecommendationWebApp/Views/Account/Register.cshtml
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
 @model BookRecommendationWebApp.Models.Accounts.UserRegistrationModel
 
 <div class="container">
-    <h1>Create a new account</h1>
+    <h1 style="margin: 40px 0 20px 0">Create a new account</h1>
 
     <div class="row">
         <div class="col-md-4">
