--- a/BookRecommendationWebApp/BookRecommendationWebApp/Views/Account/Login.cshtml
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/Views/Account/Login.cshtml
@@ -1,14 +1,14 @@
 ﻿@model BookRecommendationWebApp.Models.Accounts.UserLoginModel
 
 <div class="container">
-    <h1>Login</h1>
+    <h1 style="margin: 40px 0 20px 0">Login</h1>
 
     <div class="row">
         <div class="col-md-4">
             <form asp-action="Login" asp-route-returnUrl="@ViewData["ReturnUrl"]">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="UserName"></label>
+                    <label>Username</label>
                     <input asp-for="UserName" class="form-control"/>
                     <span asp-validation-for="UserName" class="text-danger"></span>
                 </div>
@@ -26,6 +26,7 @@
                     <input type="submit" value="Log In" class="btn btn-primary"/>
                 </div>
             </form>
+            <a class="create-acc-link" asp-controller="Account" asp-action="Register">Create a new account</a>
         </div>
     </div>
 </div>
