--- a/BookRecommendationWebApp/BookRecommendationWebApp/Views/Books/AddBook.cshtml
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/Views/Books/AddBook.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "AddBook";
 }
 <div class="container">
-    <h1>Add a book to database</h1>
+    <h1 style="margin: 40px 0 20px 0">Add a book to database</h1>
 
     <hr/>
 
