--- a/BookRecommendationWebApp/BookRecommendationWebApp/Views/Shared/_LoginPartial.cshtml
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 {
     <ul class="account-links">
         <li>
-            <a class="account-link text-dark" asp-controller="Home" asp-action="Index"
+            <a class="account-link text-dark" asp-controller="Reviews" asp-action="UserReviews"
                title="Welcome">
                 Welcome @User.Identity.Name!
             </a>
