--- a/BookRecommendationWebApp/BookRecommendationWebApp/Views/Shared/_Layout.cshtml
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                         <a class="navigation-link" asp-area="" asp-controller="Books" asp-action="Browse">Browse</a>
                     </li>
                     <li>
-                        <a class="navigation-link" asp-area="" asp-controller="Home" asp-action="Privacy">Recommendations</a>
+                        <a class="navigation-link" asp-area="" asp-controller="Books" asp-action="Recommendations">Recommendations</a>
                     </li>
                     @if (SignInManager.IsSignedIn(User) && await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), "Admin"))
                     {
