Added administration panel

--- a/BookRecommendationWebApp/BookRecommendationWebApp/Views/Shared/_Layout.cshtml
+++ b/BookRecommendationWebApp/BookRecommendationWebApp/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     @if (SignInManager.IsSignedIn(User) && await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), "Admin"))
                     {
                         <li>
-                            <a class="navigation-link" asp-area="" asp-controller="Books" asp-action="AddBook">Add Books</a>
+                            <a class="navigation-link" asp-area="" asp-controller="Administration" asp-action="AdminPanel">Administration</a>
                         </li>
                     }
                 </ul>
